Semantico/y.output
State 8 conflicts: 4 shift/reduce
State 16 conflicts: 4 shift/reduce
State 17 conflicts: 4 shift/reduce
State 18 conflicts: 4 shift/reduce
State 19 conflicts: 4 shift/reduce


Grammar

    0 $accept: exp_prn $end

    1 exp_prn: exp

    2 exp: exp '+' exp
    3    | exp '-' exp
    4    | exp '*' exp
    5    | exp '/' exp
    6    | '-' exp
    7    | '(' exp ')'
    8    | cte

    9 cte: TOK_ENTERO
   10    | TOK_FLOAT


Terminals, with rules where they appear

$end (0) 0
'(' (40) 7
')' (41) 7
'*' (42) 4
'+' (43) 2
'-' (45) 3 6
'/' (47) 5
error (256)
TOK_FLOAT (258) 10
TOK_ENTERO (259) 9


Nonterminals, with rules where they appear

$accept (11)
    on left: 0
exp_prn (12)
    on left: 1, on right: 0
exp (13)
    on left: 2 3 4 5 6 7 8, on right: 1 2 3 4 5 6 7
cte (14)
    on left: 9 10, on right: 8


State 0

    0 $accept: . exp_prn $end

    TOK_FLOAT   shift, and go to state 1
    TOK_ENTERO  shift, and go to state 2
    '-'         shift, and go to state 3
    '('         shift, and go to state 4

    exp_prn  go to state 5
    exp      go to state 6
    cte      go to state 7


State 1

   10 cte: TOK_FLOAT .

    $default  reduce using rule 10 (cte)


State 2

    9 cte: TOK_ENTERO .

    $default  reduce using rule 9 (cte)


State 3

    6 exp: '-' . exp

    TOK_FLOAT   shift, and go to state 1
    TOK_ENTERO  shift, and go to state 2
    '-'         shift, and go to state 3
    '('         shift, and go to state 4

    exp  go to state 8
    cte  go to state 7


State 4

    7 exp: '(' . exp ')'

    TOK_FLOAT   shift, and go to state 1
    TOK_ENTERO  shift, and go to state 2
    '-'         shift, and go to state 3
    '('         shift, and go to state 4

    exp  go to state 9
    cte  go to state 7


State 5

    0 $accept: exp_prn . $end

    $end  shift, and go to state 10


State 6

    1 exp_prn: exp .
    2 exp: exp . '+' exp
    3    | exp . '-' exp
    4    | exp . '*' exp
    5    | exp . '/' exp

    '+'  shift, and go to state 11
    '-'  shift, and go to state 12
    '*'  shift, and go to state 13
    '/'  shift, and go to state 14

    $default  reduce using rule 1 (exp_prn)


State 7

    8 exp: cte .

    $default  reduce using rule 8 (exp)


State 8

    2 exp: exp . '+' exp
    3    | exp . '-' exp
    4    | exp . '*' exp
    5    | exp . '/' exp
    6    | '-' exp .

    '+'  shift, and go to state 11
    '-'  shift, and go to state 12
    '*'  shift, and go to state 13
    '/'  shift, and go to state 14

    '+'       [reduce using rule 6 (exp)]
    '-'       [reduce using rule 6 (exp)]
    '*'       [reduce using rule 6 (exp)]
    '/'       [reduce using rule 6 (exp)]
    $default  reduce using rule 6 (exp)


State 9

    2 exp: exp . '+' exp
    3    | exp . '-' exp
    4    | exp . '*' exp
    5    | exp . '/' exp
    7    | '(' exp . ')'

    '+'  shift, and go to state 11
    '-'  shift, and go to state 12
    '*'  shift, and go to state 13
    '/'  shift, and go to state 14
    ')'  shift, and go to state 15


State 10

    0 $accept: exp_prn $end .

    $default  accept


State 11

    2 exp: exp '+' . exp

    TOK_FLOAT   shift, and go to state 1
    TOK_ENTERO  shift, and go to state 2
    '-'         shift, and go to state 3
    '('         shift, and go to state 4

    exp  go to state 16
    cte  go to state 7


State 12

    3 exp: exp '-' . exp

    TOK_FLOAT   shift, and go to state 1
    TOK_ENTERO  shift, and go to state 2
    '-'         shift, and go to state 3
    '('         shift, and go to state 4

    exp  go to state 17
    cte  go to state 7


State 13

    4 exp: exp '*' . exp

    TOK_FLOAT   shift, and go to state 1
    TOK_ENTERO  shift, and go to state 2
    '-'         shift, and go to state 3
    '('         shift, and go to state 4

    exp  go to state 18
    cte  go to state 7


State 14

    5 exp: exp '/' . exp

    TOK_FLOAT   shift, and go to state 1
    TOK_ENTERO  shift, and go to state 2
    '-'         shift, and go to state 3
    '('         shift, and go to state 4

    exp  go to state 19
    cte  go to state 7


State 15

    7 exp: '(' exp ')' .

    $default  reduce using rule 7 (exp)


State 16

    2 exp: exp . '+' exp
    2    | exp '+' exp .
    3    | exp . '-' exp
    4    | exp . '*' exp
    5    | exp . '/' exp

    '+'  shift, and go to state 11
    '-'  shift, and go to state 12
    '*'  shift, and go to state 13
    '/'  shift, and go to state 14

    '+'       [reduce using rule 2 (exp)]
    '-'       [reduce using rule 2 (exp)]
    '*'       [reduce using rule 2 (exp)]
    '/'       [reduce using rule 2 (exp)]
    $default  reduce using rule 2 (exp)


State 17

    2 exp: exp . '+' exp
    3    | exp . '-' exp
    3    | exp '-' exp .
    4    | exp . '*' exp
    5    | exp . '/' exp

    '+'  shift, and go to state 11
    '-'  shift, and go to state 12
    '*'  shift, and go to state 13
    '/'  shift, and go to state 14

    '+'       [reduce using rule 3 (exp)]
    '-'       [reduce using rule 3 (exp)]
    '*'       [reduce using rule 3 (exp)]
    '/'       [reduce using rule 3 (exp)]
    $default  reduce using rule 3 (exp)


State 18

    2 exp: exp . '+' exp
    3    | exp . '-' exp
    4    | exp . '*' exp
    4    | exp '*' exp .
    5    | exp . '/' exp

    '+'  shift, and go to state 11
    '-'  shift, and go to state 12
    '*'  shift, and go to state 13
    '/'  shift, and go to state 14

    '+'       [reduce using rule 4 (exp)]
    '-'       [reduce using rule 4 (exp)]
    '*'       [reduce using rule 4 (exp)]
    '/'       [reduce using rule 4 (exp)]
    $default  reduce using rule 4 (exp)


State 19

    2 exp: exp . '+' exp
    3    | exp . '-' exp
    4    | exp . '*' exp
    5    | exp . '/' exp
    5    | exp '/' exp .

    '+'  shift, and go to state 11
    '-'  shift, and go to state 12
    '*'  shift, and go to state 13
    '/'  shift, and go to state 14

    '+'       [reduce using rule 5 (exp)]
    '-'       [reduce using rule 5 (exp)]
    '*'       [reduce using rule 5 (exp)]
    '/'       [reduce using rule 5 (exp)]
    $default  reduce using rule 5 (exp)
